--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div class="row1 bgimage">
-        <h1> SEVEN SEES </h1>
+        <h1> SEVEN SEAS </h1>
         <h2>Event Management</h2>
         <div class="navigation">
             <a href="#">Home</a>
@@ -94,7 +94,7 @@
     </div>
 
     <div class="row3">
-        <p>&copy; 2024 Seven Sees Web Page. All rights reserved.</p>
+        <p>&copy; 2024 Seven Seas Web Page. All rights reserved.</p>
     </div>
 </body>
 </html>
